--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,14 +36,17 @@
 
         <TableRow>
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/id_numPokemon"
                 android:id="@+id/pokemonTextView" />
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"
                 android:inputType="number"
                 android:ems="10"
                 android:id="@+id/pokemonEditText" />
@@ -51,15 +54,18 @@
 
         <TableRow>
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/id_numCandies"
                 android:id="@+id/candiesTextView"
                 android:paddingBottom="30dp" />
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"
                 android:inputType="number"
                 android:ems="10"
                 android:id="@+id/candiesEditText" />
