--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="@string/id_select"
                     android:id="@+id/selectPokemon"
                     android:paddingBottom="20dp" />
@@ -36,7 +36,8 @@
                     android:id="@+id/spinner"
                     android:layout_weight="2"
                     android:spinnerMode="dropdown"
-                    android:paddingBottom="30dp" />
+                    android:background="@drawable/background_spinner"
+                    android:popupBackground="@drawable/background_spinner"/>
             </TableRow>
 
             <TableRow>
@@ -44,9 +45,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="@string/id_numPokemon"
-                    android:id="@+id/pokemonTextView" />
+                    android:id="@+id/pokemonTextView"
+                    android:paddingTop="30dp"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -54,7 +56,8 @@
                     android:layout_gravity="center_horizontal"
                     android:inputType="number"
                     android:ems="10"
-                    android:id="@+id/pokemonEditText" />
+                    android:id="@+id/pokemonEditText"
+                    android:paddingTop="30dp"/>
             </TableRow>
 
             <TableRow>
@@ -62,10 +65,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="@string/id_numCandies"
                     android:id="@+id/candiesTextView"
-                    android:paddingBottom="30dp" />
+                    android:paddingTop="10dp" />
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -73,7 +76,8 @@
                     android:layout_gravity="center_horizontal"
                     android:inputType="number"
                     android:ems="10"
-                    android:id="@+id/candiesEditText" />
+                    android:id="@+id/candiesEditText"
+                    android:paddingTop="10dp"/>
             </TableRow>
         </TableLayout>
 
